app/modules/common/header/defaultheader.scss
.cc-header{
    background: $toolbar-background-color; /* Old browsers */
    border-bottom: 2px solid $toolbar-border-color;
    height: 45px;
    z-index: 999;
    width: 100%;
    position: relative;
}

.cc-supports-position-fixed{
    .cc-header{
        position: fixed;
    }
}

//generic seperator lines that magically allways look awesome
//(it could be tweaked for black and white though)
.cc-header-seperator, %cc-header-seperator{
    height: 100%;
    border-left: 1px solid $toolbar-border-color;
    border-right: 1px solid lighten($toolbar-background-color, 10%);
}


.cc-header-back-seperator{
    position: absolute;
    left: 45px;
}

.cc-header-cart-seperator{
    position: absolute;
    right: 45px;
}

.cc-header-icon{
    text-shadow: 1px 1px 1px lighten($toolbar-icon-color, 15%);;
    color: $toolbar-icon-color;
    //the padding is to increase the clickable area
    padding: 0 10px 0 10px;
    position: absolute;
    line-height: 45px;
    z-index: 5;
}

.cc-header-badge{
    position: absolute;
    padding: 1px;
    font-size: $font-size-small;
    font-weight: bold;
    border: 1px solid black;
    line-height: normal;
    border-radius: 3px;
    min-width: 22px;
    text-align: center;
}

.cc-header-shopping-cart-badge{
    top: 4px;
    right: 2px;
    background: red;
    color: #ffffff;
    text-shadow: 1px 1px 1px #000000;
}

.cc-header-icon:active, .ng-click-active.cc-header-icon{
    //TODO: get rid of hardcoded active style
    color: white;
}

.cc-header-shopping-cart{
    right: 0;
}

.cc-header-logo-wrapper{
    @extend %cc-expand-only;
    text-align: center;
    line-height: 45px;
}
/* ... */

